syntax = "proto3";

package minimax.text.v1;

option go_package = "github.com/ConnectAI-E/go-claude/gen/go/claude/text/v1;text";
option java_multiple_files = true;
option java_outer_classname = "claudeProto";
option java_package = "com.conectai-e.claude.text.v1";


message UserMeta {
  string user_id = 1;
}




message ChatCompletionsRequest {
  //目前只能取下面的值
  //claude-1
  //claude-1-100k
  //claude-instant-1
  //claude-instant-1-100k
  // or sub model
  //claude-1.3
  //claude-1.3-100k
  //claude-1.2
  //claude-1.0
  //claude-instant-1.1
  //claude-instant-1.1-100k
  //claude-instant-1.0
  string model = 1;
  // 否 对回复添加情绪预测。注意，当with_emotion=true，且请求上下文（输入和输出文本）长时，请求会显著变慢，达到数秒。
  repeated string stop_sequences = 2;
  // 否 	是否以流式接口的形式返回数据，默认false。
  bool stream = 3;
  int32 maxTokensToSample=4;
  // 对话问题、人物或功能设定 ，不可为空
  string prompt = 5;
  // 	对话上下文信息。说明："user_name": "我", "bot_name": "专家"
  UserMeta metadata = 6;
  float temperature = 7;
  float top_p = 8;
  int32 top_k = 9;
}



message ErrorResponse {
  //错误详情
  string type = 1;
  //错误详情
  string message = 2;
}


message ChatCompletionsResponse {
  //文本结果
  string completion = 1;
  //模型名称
  string model = 2;
  //结束原因，枚举值
  string stop_reason = 3;
  //是否截断
  bool truncated = 4;
  //停止词
  string stop = 5;
  //日志id
  string log_id = 6;
  //异常信息
  string exception = 7;
  //错误信息
  ErrorResponse error = 8;
}
